All tests and code are done 24-40